# decentralized-lms

./: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  REVISION_SUMMARY.md  ROUTER_REFACTOR_SUMMARY.md  build_frontend.sh  comprehensive_test.sh  deploy_fullstack.sh  dfx.json  index.html  package-lock.json  package.json  test_core_system.sh  test_deployment.sh  test_extended_system.sh  test_template_based_registration.sh  validate_build.sh  vite.config.js
assets/: index-CVE5nFq2.js  index-CW8NsS9b.js  index-jru-wrFM.css
docs/: ARCHITECTURE_DIAGRAMS.md  DEPLOYMENT.md  DNS_CODE_EXAMPLES.md  DNS_SUMMARY.md  README.md  UNIQUE_CANISTER_SOLUTION.md
frontend/: FRONTEND_README.md  QUICK_START.md  index.html  package-lock.json  package.json  start-dev.bat  start-dev.sh  (+2 more)
src/shared/: Cargo.toml
src/shared/src/: course.rs  error.rs  file_storage.rs  grade.rs  lib.rs  pre_provision.rs  quiz.rs  tests.rs  user.rs  utils.rs
src/tenant_canister/: Cargo.toml  tenant_canister.did
src/tenant_canister/src/: api.rs  auth.rs  course_management.rs  file_storage.rs  grade_management.rs  http_handler.rs  lib.rs  pre_provision.rs  quiz_management.rs  rbac.rs  storage.rs  types.rs  user_management.rs
src/tenant_canister/src/api/: courses.rs  grades.rs  quizzes.rs  system.rs  users.rs
src/tenant_canister/src/grade/: core.rs  mod.rs  statistics.rs  types.rs  validation.rs  weights.rs
src/tenant_canister/src/http/: auth.rs  handlers.rs  mod.rs  responses.rs  routing.rs  types.rs
src/tenant_canister/src/quiz/: analytics.rs  attempts.rs  core.rs  mod.rs  types.rs  validation.rs
(+87 files in other folders)
