[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
ic-cdk = "0.13"
ic-stable-structures = { version = "0.6", optional = true }

[features]
stable-storage = ["ic-stable-structures"]

[dev-dependencies]
serde_json = "1.0"
